--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">TimerApp01V2</string>
+    <string name="app_name">TimerApp01v2</string>
+    <string name="start">スタート</string>
+    <string name="stop">ストップ</string>
+    <string name="reset">リセット</string>
 </resources>
